--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>pm.pride</groupId>
-	<artifactId>manual-examples</artifactId>
+	<artifactId>pride-manual-examples</artifactId>
 	<version>0.1-SNAPSHOT</version>
 
 	<properties> 
