--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,16 @@
 	<version>0.1-SNAPSHOT</version>
 
 	<properties> 
-        <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties> 
 	
 	<dependencies>
 		<dependency>
 		  <groupId>pm.pride</groupId>
 		  <artifactId>pride</artifactId>
-		  <version>LATEST</version>
+		  <version>3.2.0</version>
 		</dependency>
 		<dependency>
 		  <groupId>org.xerial</groupId>
