--- a/config/pride.examples.config.properties
+++ b/config/pride.examples.config.properties
@@ -2,3 +2,10 @@ pride.dbtype=sqlite
 pride.driver=org.sqlite.JDBC
 pride.db=jdbc:sqlite:pride.examples.db
 pride.logfile=sql.log
+
+#pride.dbtype=oracle
+#pride.driver=oracle.jdbc.driver.OracleDriver
+#pride.db=jdbc:oracle:thin:@localhost:1521:xe
+#pride.user=system
+#pride.password=admin
+#pride.logfile=sql.log
